--- a/package.json
+++ b/package.json
@@ -4,51 +4,50 @@
   "private": true,
   "author": "Ivan Saranchonkau <ivan.saranchenkov@gmail.com>",
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.3",
-    "@fortawesome/fontawesome-free-brands": "^5.0.6",
-    "@fortawesome/fontawesome-free-regular": "^5.0.6",
-    "@fortawesome/fontawesome-free-solid": "^5.0.6",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "0.0.17",
-    "exceljs": "^1.1.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
-  },
-  "devDependencies": {
-    "@material-ui/core": "^1.2.3",
+    "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^1.1.0",
-    "ag-grid": "^16.0.1",
-    "ag-grid-react": "^16.0.0",
     "aphrodite": "^1.2.5",
-    "bootstrap": "^4.0.0",
-    "chart.js": "^2.7.1",
+    "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
-    "electron": "^1.7.15",
-    "electron-builder": "^19.56.2",
-    "electron-packager": "^10.1.2",
-    "electron-rebuild": "^1.7.3",
+    "exceljs": "^1.6.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "is-electron": "^2.1.0",
-    "lodash": "^4.17.5",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "node-uuid": "^1.4.8",
     "numeral": "^2.0.6",
-    "prop-types": "^15.6.0",
-    "react": "^16.4.1",
-    "react-chartjs-2": "^2.7.0",
-    "react-dom": "^16.2.0",
+    "popper.js": "^1.14.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.4.2",
     "react-dom-factories": "^1.0.2",
-    "react-paginate": "^5.1.0",
+    "react-paginate": "^5.2.4",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
-    "react-tex": "^1.3.0",
+    "react-tex": "^1.4.0",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
-    "redux-form": "^7.2.3",
-    "redux-thunk": "^2.2.0",
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
+  },
+  "devDependencies": {
+    "electron": "^1.8.7",
+    "electron-builder": "^19.56.2",
+    "electron-packager": "^10.1.2",
+    "electron-rebuild": "^1.8.2"
   },
   "description": "React and Electron Awesome App",
   "homepage": "./",
