--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "react-start": "react-scripts start"
+    "start": "react-scripts start"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
