--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "author": "Ivan Saranchonkau <ivan.saranchenkov@gmail.com>",
   "scripts": {
-    "build-win-32": "build --em.main=build/main.js --win --ia32",
-    "build-win-64": "build --em.main=build/main.js --win --x64",
-    "build-linux": "build --em.main=build/main.js --linux",
-    "dist": "build --em.main=build/main.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -53,20 +49,6 @@
     "prettier": "^1.18.2"
   },
   "description": "React and Electron Awesome App",
-  "homepage": "./",
-  "main": "electron/main.js",
-  "build": {
-    "productName": "ChemHelper",
-    "appId": "by.bsu.chemistry",
-    "electronVersion": "1.7.15",
-    "asar": false,
-    "win": {
-      "target": "nsis"
-    },
-    "files": [
-      "build/**/*"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -74,7 +56,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,json,css,md}": [
-      "prettier --write",
+      "prettier --write --ignore-path .prettierignore",
       "git add"
     ]
   },
