--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "author": "Ivan Saranchonkau <ivan.saranchenkov@gmail.com>",
+  "homepage": "./",
   "scripts": {
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
