--- a/electron/package.json
+++ b/electron/package.json
@@ -11,17 +11,19 @@
     "electron": "electron .",
     "electron-dev": "cross-env ELECTRON_START_URL=http://localhost:3000 electron .",
     "postinstall": "electron-builder install-app-deps",
-    "rebuild": "electron-rebuild -f -w sqlite3"
+    "rebuild": "electron-rebuild -f -w sqlite3",
+    "remove-client": "rimraf client"
   },
   "dependencies": {
     "knex": "^0.19.1",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
-    "electron": "^6.0.1",
     "cross-env": "^5.2.0",
+    "electron": "^6.0.1",
     "electron-builder": "^21.2.0",
     "electron-packager": "^14.0.4",
-    "electron-rebuild": "^1.8.5"
+    "electron-rebuild": "^1.8.5",
+    "rimraf": "^3.0.0"
   }
 }
